data/derived/fa15/progs/unify/prog0670.ml.out
Characters 27-31:
  let _ = List.mem( 4, test) test;;
                             ^^^^
Error: This expression has type int list
       but an expression was expected of type (int * int list) list
       Type int is not compatible with type int * int list 
